# TPyGame

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: main.yml
scripts/: bouncing_circles.py  profile_video.py  random_video_player.py  resizable_video_player.py
scripts/fileio/: file_management.py
scripts/graphics/: bouncing_circles.py  profile_video.py  random_video_player.py  resizable_video_player.py
src/TPyGame.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/tpygame/: __init__.py  frame.py  image.py  render.py  video.py
src/tpygame/audio/: __init__.py  audio_interface.py
src/tpygame/file/: __init__.py  config.py  fm.py  whitelist.py
src/tpygame/render/: __init__.py  frame.py  image.py  parallel.py  screen.py  term_utils.py  text.py  video.py
tests/: test_screen.py
tests/test_file/: test_fm.py  test_whitelist.py
tests/test_render/: test_frame.py  test_image.py  test_screen.py
